--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -732,7 +732,7 @@ ul.actions, ul.special_actions, ul.heroic_actions {
   &>li {
     list-style: none; padding: 2px 2px 2px 10px; font-size: 1.2rem; font-variant: small-caps;
     color: @myhordes-smalltext; position: relative;
-    &:not(.open) {
+    &:not(.open):not([disabled]) {
       cursor: pointer;
       &:hover { color: white; background: lighten(@myhordes-cell-header-background-color, 10%) }
     }
@@ -775,7 +775,10 @@ ul.actions, ul.special_actions, ul.heroic_actions {
         text-decoration: underline;
       }
     }
-    &[disabled]>span { text-decoration: line-through; }
+    &[disabled] {
+      &>span { text-decoration: line-through; }
+      pointer-events: auto; cursor: default;
+    }
     &+li { border-top: 1px solid fade(@myhordes-smalltext,20%) }
   }
 }
