--- a/templates/ajax/game/town/watchtower.html.twig
+++ b/templates/ajax/game/town/watchtower.html.twig
@@ -71,7 +71,7 @@
                     <div>{{'Wir denken, der morgige Angriff wird ungefähr folgendermaßen aussehen:'|trans({}, 'game')}}</div>
                     <b>{{ z1[2] }} - {{ z1[3] }}</b> <img alt="{{ 'Zombies'|trans({},'game') }}" src="{{ asset('build/images/icons/small_zombie.gif') }}" />
                 {% else %}
-                    <b>???</b> <img alt="{{ 'Zombies'|trans({},'game') }}" src="{{ asset('build/images/icons/small_zombie.gif') }}" />
+                    <div>{{'Die Schätzung des heutigen Tages muss zuerst abgeschlossen werden, um die Schätzung des nächsten Tages zu berechnen.'|trans({}, 'game')}}</div>
                 {% endif %}
             </div>
             <div class="padded cell rw-12 center small">
@@ -90,9 +90,7 @@
                 {% endif %}
             </div>
             <div class="padded cell rw-12 center small">
-                {% if z1[1] %}
-                    <button {% if not z1_av %}disabled{% endif%} x-predict-attack="1"><img alt="" src="{{ asset('build/images/building/item_electro.gif') }}" /> {{ 'Den morgigen Angriff berechnen'|trans({},'game') }}</button>
-                {% endif %}
+                <button {% if not z1[1] or not z1_av %}disabled{% endif%} x-predict-attack="1"><img alt="" src="{{ asset('build/images/building/item_electro.gif') }}" /> {{ 'Den morgigen Angriff berechnen'|trans({},'game') }}</button>
             </div>
             {% else %}
                 <div class="padded cell rw-12 center">
