--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -364,23 +364,24 @@
                 {% endif %}
 
                 {% if allow_enter_town %}
+                    {% if enter_costs_ap %}
+                    <div class="note note-critical">
+                        {% trans from 'game' %}
+                            <strong>Achtung!</strong> Das Betreten der Stadt erfordert <div class="ap">1</div> (die Kosten sind auf den Bau des <strong>Labyrinths</strong> zurückzuführen)!
+                        {% endtrans %}
+                    </div>
+                    {% endif %}
                     <button id="town-enter" {% if not doors_open %}disabled{% endif %}>
                         {% if zone.x == 0 and zone.y == 0 %}
                             <img alt="" src="{{ asset('build/images/emotes/arrowright.gif') }}"> {% trans from 'game' %}Stadt betreten{% endtrans %} {% if conf.get(constant('App\\Structures\\TownConf::CONF_FEATURE_ESCORT'),true) and citizen.validLeadingEscorts|length > 0 %}{{ '(Allein)'|trans({}, 'game') }}{% endif %}
                         {% else %}
                             <img class="icon left" alt="" src="{{ asset('build/images/building/small_door_closed.gif') }}" />{% trans from 'game' %}In die Stadt zurückkehren{% endtrans %}
                         {% endif %}
-                        {% if enter_costs_ap %}
-                            (<div class="ap">1</div>)
-                        {% endif %}
                     </button>
                     {% if conf.get(constant('App\\Structures\\TownConf::CONF_FEATURE_ESCORT'),true) and citizen.validLeadingEscorts|length > 0 and zone.x == 0 and zone.y == 0 %}
                         <button id="town-enter-escort" {% if not doors_open %}disabled{% endif %}>
                             <img alt="" src="{{ asset('build/images/emotes/arrowright.gif') }}">
                             {% trans from 'game' %}Stadt betreten{% endtrans %} {% trans from 'game' %}(Mit Eskorte){% endtrans %}
-                            {% if enter_costs_ap %}
-                                (<div class="ap">1</div>)
-                            {% endif %}
                         </button>
                     {% endif %}
                 {% endif %}
