--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -732,7 +732,7 @@ ul.actions, ul.special_actions, ul.heroic_actions {
   &>li {
     list-style: none; padding: 2px 2px 2px 10px; font-size: 1.2rem; font-variant: small-caps;
     color: @myhordes-smalltext; position: relative;
-    &:not(.open):not([disabled]) {
+    &:not(.open):not([disabled]):not(.help) {
       cursor: pointer;
       &:hover { color: white; background: lighten(@myhordes-cell-header-background-color, 10%) }
     }
