--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -316,6 +316,11 @@
                                 <img class="icon left" alt="" src="{{ asset('build/images/icons/small_gather.gif') }}" />
                                 {% trans from 'game' %}Nächste automatische Ausgrabung:{% endtrans %}
                                 <span x-countdown="{{ citizen.digTimeout }}" x-on-expire="reload">...</span>
+                                <div class="tooltip help">
+                                    {% trans from 'game' %}
+                                        Du bist gerade dabei in dieser Zone zu graben. Wenn du bis zum Ende der angezeigten Zeit am gleichen Platz bleibst, <strong>hast du die Möglichkeit einen weiteren Gegenstand zu finden</strong>!<br /><br />Du kannst so lange bleiben wie du möchtest.
+                                    {% endtrans %}
+                                </div>
                             </div>
                         {% endif %}
                         {% if zone.prototype %}
