--- a/assets/less/intl.less
+++ b/assets/less/intl.less
@@ -35,16 +35,16 @@ html.lang-base-fr .hardcore::before { background-image: url('../img/background/t
 html.lang-base-es .hardcore::before { background-image: url('../img/background/town/sign_header_hardcore_es.jpg'); }
 
 html.lang-base-en div.ap::after, html.lang-base-en span.ap::after { background-image: url('../img/icons/ap_small_en.gif'); }
-html.lang-base-fr div.ap::after, html.lang-base-en span.ap::after { background-image: url('../img/icons/ap_small_fr.gif'); }
-html.lang-base-es div.ap::after, html.lang-base-en span.ap::after { background-image: url('../img/icons/ap_small_es.gif'); }
+html.lang-base-fr div.ap::after, html.lang-base-fr span.ap::after { background-image: url('../img/icons/ap_small_fr.gif'); }
+html.lang-base-es div.ap::after, html.lang-base-es span.ap::after { background-image: url('../img/icons/ap_small_es.gif'); }
 
 html.lang-base-en div.pm::after, html.lang-base-en span.pm::after { background-image: url('../img/icons/pm_small_en.gif'); }
-html.lang-base-fr div.pm::after, html.lang-base-en span.pm::after { background-image: url('../img/icons/pm_small_fr.gif'); }
-html.lang-base-es div.pm::after, html.lang-base-en span.pm::after { background-image: url('../img/icons/pm_small_es.gif'); }
+html.lang-base-fr div.pm::after, html.lang-base-fr span.pm::after { background-image: url('../img/icons/pm_small_fr.gif'); }
+html.lang-base-es div.pm::after, html.lang-base-es span.pm::after { background-image: url('../img/icons/pm_small_es.gif'); }
 
 html.lang-base-en div.bp::after, html.lang-base-en span.bp::after { background-image: url('../img/icons/bp_small_en.gif'); }
-html.lang-base-fr div.bp::after, html.lang-base-en span.bp::after { background-image: url('../img/icons/bp_small_fr.gif'); }
-html.lang-base-es div.bp::after, html.lang-base-en span.bp::after { background-image: url('../img/icons/bp_small_es.gif'); }
+html.lang-base-fr div.bp::after, html.lang-base-fr span.bp::after { background-image: url('../img/icons/bp_small_fr.gif'); }
+html.lang-base-es div.bp::after, html.lang-base-es span.bp::after { background-image: url('../img/icons/bp_small_es.gif'); }
 
 html.lang-base-de div.game-bar ul.ap li::before { content: url('../img/icons/ap_small.gif'); }
 html.lang-base-en div.game-bar ul.ap li::before { content: url('../img/icons/ap_small_en.gif'); }
