--- a/templates/ajax/admin/users/pictos.html.twig
+++ b/templates/ajax/admin/users/pictos.html.twig
@@ -1,6 +1,6 @@
 {% extends "ajax/ajax.html.twig" %}
 
-{% from "ajax/admin/widget/controls.twig" import widget_picto_creator as picto_creator, widget_picto_creator_js as picto_creator_js %}
+{% from "ajax/admin/widget/controls.twig" import widget_picto_creator as picto_creator, widget_picto_creator_js as picto_creator_js, widget_feature_creator as feature_creator, widget_feature_creator_js as feature_creator_js %}
 
 {% block title %}{% trans from 'admin' %}Auszeichnungen{% endtrans %}{%  endblock %}
 {% block ajax %}
@@ -8,14 +8,42 @@
         <div class="cell padded header rw-12">
             {% embed "ajax/admin/users/tabs.html.twig" %}{% endembed %}
             <div class="row">
-                {% if is_granted("ROLE_ADMIN") %}
+
                 <div class="cell rw-5 rw-sm-12 center">
                     {% include 'ajax/soul/distinctions.html.twig' with {pictos: pictos, user: user} %}
                 </div>
                 <div class="cell rw-5 rw-lg-7 rw-sm-12">
-                    {{ picto_creator(pictoPrototypes) }}
+                    {% if is_granted("ROLE_ADMIN") %}
+                        {{ picto_creator(pictoPrototypes) }}
+                    {% endif %}
+                    <ul class="inventory soul">
+                        <li class="title">{{ 'Spiritueller Rucksack'|trans({},'game') }}</li>
+                        {% for feature in features %}
+                            <li class="item">
+                                <span class="item-icon"><img alt="" src="{{ asset('build/images/pictos/' ~ feature.prototype.icon ~ '.gif') }}" /></span>
+                                <div class="tooltip normal">
+                                    <h1>{{ feature.prototype.label|trans({},'items') }} <img alt="" src="{{ asset('build/images/pictos/' ~ feature.prototype.icon ~ '.gif') }}" /></h1>
+                                    {{ feature.prototype.description|trans({},'items') }}
+                                    <hr>
+                                    <span class="small">
+                                        {{ 'Freigeschaltet:'|trans({},'game') }}
+                                        <b>
+                                            {% if (feature.expirationMode == constant('App\\Entity\\FeatureUnlock::FeatureExpirationNone')) %}{{ 'Dauerhaft!'|trans({},'game') }}
+                                            {% elseif (feature.expirationMode == constant('App\\Entity\\FeatureUnlock::FeatureExpirationSeason')) %}{{ 'Für diese Saison'|trans({},'game') }}
+                                            {% elseif (feature.expirationMode == constant('App\\Entity\\FeatureUnlock::FeatureExpirationTimestamp')) %}{{ 'Bis %date%'|trans({'%date%': feature.timestamp|format_datetime('short', 'none')},'game') }}
+                                            {% elseif (feature.expirationMode == constant('App\\Entity\\FeatureUnlock::FeatureExpirationTownCount')) %}{{ 'Für %num% weitere Städte'|trans({'%num%': feature.townCount},'game') }}
+                                            {% else  %}???{% endif %}
+                                        </b>
+
+                                    </span>
+                                </div>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                    {% if is_granted("ROLE_ADMIN") %}
+                        {{ feature_creator(featurePrototypes) }}
+                    {% endif %}
                 </div>
-                {% endif %}
             </div>
         </div>
     </div>
@@ -25,5 +53,6 @@
     {{ parent() }}
     {% if is_granted("ROLE_ADMIN") %}
         {{ picto_creator_js(path('admin_user_give_picto', {id: user.id}), path('admin_users_pictos_view', {id: user.id})) }}
+        {{ feature_creator_js(path('admin_user_give_feature', {id: user.id}), path('admin_users_pictos_view', {id: user.id})) }}
     {% endif %}
 {% endblock %}
