--- a/templates/ajax/soul/me.html.twig
+++ b/templates/ajax/soul/me.html.twig
@@ -65,6 +65,32 @@
 
             <div class="score"><img src="{{ asset('build/images/soul/small_score.gif') }}" alt="" /> {{ 'Seelenpunktzahl'|trans({}, 'global') }} : <strong>{{ '%points% Punkte'|trans({'%points%': app.user.allSoulPoints}, 'global') }}</strong> <a class="help-button"><div class="tooltip help">{{ 'Diese Punkte werden für die Seelenrangliste verwendet.'|trans({},'global') }}<p style="color: #f0d79e;"><i>{{ 'Abhängig von der Anzahl der Tage, die du überlebt hast, erhältst du nach jeder Partie eine bestimmte Anzahl an Punkten.'|trans({},'global') }}</i></p></div>{{ 'Hilfe'|trans({},'global') }}</a></div>
 
+            {% if features is not empty %}
+                <ul class="inventory soul">
+                    <li class="title">{{ 'Spiritueller Rucksack'|trans({},'game') }}</li>
+                    {% for feature in features %}
+                        <li class="item">
+                            <span class="item-icon"><img alt="" src="{{ asset('build/images/pictos/' ~ feature.prototype.icon ~ '.gif') }}" /></span>
+                            <div class="tooltip normal">
+                                <h1>{{ feature.prototype.label|trans({},'items') }} <img alt="" src="{{ asset('build/images/pictos/' ~ feature.prototype.icon ~ '.gif') }}" /></h1>
+                                {{ feature.prototype.description|trans({},'items') }}
+                                <hr>
+                                <span class="small">
+                                    {{ 'Freigeschaltet:'|trans({},'game') }}
+                                    <b>
+                                        {% if (feature.expirationMode == constant('App\\Entity\\FeatureUnlock::FeatureExpirationNone')) %}{{ 'Dauerhaft!'|trans({},'game') }}
+                                        {% elseif (feature.expirationMode == constant('App\\Entity\\FeatureUnlock::FeatureExpirationSeason')) %}{{ 'Für diese Saison'|trans({},'game') }}
+                                        {% elseif (feature.expirationMode == constant('App\\Entity\\FeatureUnlock::FeatureExpirationTimestamp')) %}{{ 'Bis %date%'|trans({'%date%': feature.timestamp|format_datetime('short', 'none')},'game') }}
+                                        {% elseif (feature.expirationMode == constant('App\\Entity\\FeatureUnlock::FeatureExpirationTownCount')) %}{{ 'Für %num% weitere Städte'|trans({'%num%': feature.townCount},'game') }}
+                                        {% else  %}???{% endif %}
+                                    </b>
+                                </span>
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+
             {% if app.user.activeCitizen is not null and app.user.activeCitizen.alive %}
                 <div class="current">
                     <em>{{'Aktuelles Leben'|trans({}, 'global')}} : </em><br /><strong><img src="{{ asset('build/images/soul/r_explor.gif') }}" alt="" /> {{ app.user.activeCitizen.town.name }}</strong> ({{ 'Tag %day%'|trans({ '%day%':app.user.activeCitizen.town.day }, 'game') }})
