--- a/templates/ajax/game/town/door.html.twig
+++ b/templates/ajax/game/town/door.html.twig
@@ -33,7 +33,9 @@
         <div class="padded cell rw-8 ellipsis row-detail">{{def}} <img src="{{ asset('build/images/icons/small_def.gif') }}" alt="" /> (<span class="link" x-ajax-href="{{ path('town_dashboard') }}">{{'Details ansehen'|trans({}, 'game')}}</span>)</div>
         <div class="padded cell rw-4 ellipsis row-header"><img src="{{ asset('build/images/item/item_door.gif') }}" alt="" /> {{'Lage'|trans({}, 'game')}}</div>
         <div class="padded cell rw-8 ellipsis row-detail">
-            {% if town.door %}
+            {% if town.door and town.devastated %}
+                <span class="warning">{{'Stadttor zerstört!'|trans({}, 'game')}}</span> <span class="small">(<span class="link" x-ajax-href="{{ path("town_citizens") }}">{{'Wer ist draußen?'|trans({}, 'game')}}</span>)</span>
+            {% elseif (town.door) %}
                 <span class="warning">{{'Stadttor geöffnet'|trans({}, 'game')}}</span> <span class="small">(<span class="link" x-ajax-href="{{ path("town_citizens") }}">{{'Wer ist draußen?'|trans({}, 'game')}}</span>)</span>
             {% else %}
                 {{'Stadttor geschlossen'|trans({}, 'game')}}
@@ -64,24 +66,41 @@
                 {% endif %}
             {% endif %}
 
-            <div class="help">
-                {% trans from 'game' %}
-                    Du kannst von hier aus die Stadt verlassen und die Außenwelt erkunden. Vergiss aber nicht, um Mitternacht das Tor zu schließen!
-                {% endtrans %}
-            </div>
-
-            {% if banished %}
-                <div class="note note-warning">
+            {% if not town.devastated %}
+                <div class="help">
                     {% trans from 'game' %}
-                        Du wurdest verbannt und kannst daher das Stadttor weder öffnen noch schließen.
+                        Du kannst von hier aus die Stadt verlassen und die Außenwelt erkunden. Vergiss aber nicht, um Mitternacht das Tor zu schließen!
                     {% endtrans %}
+                </div>
+
+                {% if banished %}
+                    <div class="note note-warning">
+                        {% trans from 'game' %}
+                            Du wurdest verbannt und kannst daher das Stadttor weder öffnen noch schließen.
+                        {% endtrans %}
+                    </div>
+                {% endif %}
+            {% else %}
+                <div class="note note-critical">
+                    {% trans from 'game' %}
+                        Das Stadttor wurde bei einem besonders furchtbaren Angriff aus den Angeln gerissen und in die Aussenwelt geschleudert. Du solltest dich heute Nacht besser nicht hier aufhalten, sonst wird diese Stadt dein Grab.
+                    {% endtrans %}
+                    <br/><br/>
+                    <strong>{% trans from 'game' %}
+                        Das passiert eben, wenn man eine Stadt ohne einen einzigen Einwohner zurücklässt.
+                    {% endtrans %}</strong>
                 </div>
             {% endif %}
 
             <h5>{% trans from 'game' %}Meine Aktionen{% endtrans %}</h5>
             {% if not banished %}
                 {% if town.door %}
-                    <button id="door_closer" {% if town.devastated %}disabled{% endif %}><img alt="" src="{{ asset('build/images/icons/small_action.gif') }}" />{% trans from 'game' %}Tor schließen{% endtrans %} (<div class="ap">1</div>)</button>
+                    <div style="margin-bottom: 5px;">
+                        <button id="door_closer" {% if town.devastated %}disabled{% endif %}><img alt="" src="{{ asset('build/images/icons/small_action.gif') }}" />{% trans from 'game' %}Tor schließen{% endtrans %} (<div class="ap">1</div>)</button>
+                        {% if town.devastated %}
+                            <div class="tooltip">{{ 'Das Stadttor ist zerstört!'|trans({},'game') }}</div>
+                        {% endif %}
+                    </div>
                 {% else %}
                     <button id="door_opener" {% if door_locked %}disabled{% endif %}><img alt="" src="{{ asset('build/images/icons/small_action.gif') }}" />{% trans from 'game' %}Tor öffnen{% endtrans %} (<div class="ap">1</div>)</button>
                 {% endif %}
