--- a/templates/ajax/game/town/home.html.twig
+++ b/templates/ajax/game/town/home.html.twig
@@ -457,10 +457,9 @@
 
             {% if town.devastated %}
                 <div class="note note-critical">{{ 'Die Stadt ist verwüstet! Du kannst dein Haus nicht mehr ausbauen, weil es ebenfalls niedergebrannt ist.'|trans({},'game') }}</div>
-            {% endif %}
-
-            {# @var next_level_req \App\Entity\BuildingPrototype #}
-            <div class="row">
+            {% else %}
+                {# @var next_level_req \App\Entity\BuildingPrototype #}
+                <div class="row">
                 <div class="padded cell rw-5 rw-md-12">
                     <button id="upgrade_home_level" {% if devastated %}disabled{% endif %}>
                         <img alt="" src="{{ asset('build/images/icons/home.gif') }}" />
@@ -497,7 +496,7 @@
                     </div>
                 </div>
             </div>
-
+            {% endif %}
         {% endif %}
 
         {% if home.prototype.allowSubUpgrades %}
