--- a/templates/ajax/game/town/town.html.twig
+++ b/templates/ajax/game/town/town.html.twig
@@ -223,7 +223,7 @@
                         </div>
                     {% endif %}
                     {% if chaos %}
-                        <div class="header-menu chaos"><a class="help-button"><div class="tooltip help">{{ '<strong>Die Stadt versinkt im Chaos!</strong></p>Es gilt kein Gesetz mehr... Ihr müsst jetzt alle zusammenhalten und mit den Übriggebliebenen auskommen!<p><em>... Oder euch gegenseitig abschlachten, je nachdem.</em>'|trans({},'global')|raw }}</div>{{ 'Hilfe'|trans({},'global') }}</a></div>
+                        <div class="header-menu chaos pointer" x-ajax-href="{{ path('help',{name: 'devastated_town'}) }}"><a class="help-button"><div class="tooltip help">{{ '<strong>Die Stadt versinkt im Chaos!</strong></p>Es gilt kein Gesetz mehr... Ihr müsst jetzt alle zusammenhalten und mit den Übriggebliebenen auskommen!<p><em>... Oder euch gegenseitig abschlachten, je nachdem.</em>'|trans({},'global')|raw }}</div>{{ 'Hilfe'|trans({},'global') }}</a></div>
                     {% elseif town.insurrectionProgress >= 100 %}
                         <div class="header-menu insurrect"></div>
                     {% endif %}
