--- a/assets/less/modules/log.less
+++ b/assets/less/modules/log.less
@@ -127,6 +127,7 @@
         }
         b { color: white }
         strong { color: white; font-variant: small-caps; }
+        word-wrap: break-word;
       }
 
       &.shout-entry-class-1 {
