--- a/templates/ajax/game/town/watchtower.html.twig
+++ b/templates/ajax/game/town/watchtower.html.twig
@@ -22,8 +22,8 @@
     <div class="block watchtower">
         <div class="row">
             {% if z0[4] >= wtt %}
-            <div class="padded cell rw-12 left">
-                {{ 'Heutige Abschätzung'|trans({},'game') }}
+            <div class="padded cell rw-12 center">
+                <strong>{{ 'Heutige Abschätzung'|trans({},'game') }}</strong>
             </div>
             <div class="cell rw-12 center">
                 <b>{{ z0[2] }} - {{ z0[3] }}</b> <img alt="{{ 'Zombies'|trans({},'game') }}" src="{{ asset('build/images/icons/small_zombie.gif') }}" />
