--- a/templates/ajax/game/actions.html.twig
+++ b/templates/ajax/game/actions.html.twig
@@ -43,7 +43,7 @@
                         <span>{{ '%action%: %item%'|trans({'%action%': entry.action.label|trans({},'items')|e('html'), '%item%': '<b>' ~ entry.item.prototype.label|trans({},'items')|e('html') ~ '</b>'},'items')|raw }}</span>
                         {% if entry.targets is not null and not entry.crossed %}
                             {% if entry.target_mode in [2,3,4,5] %}
-                                {{ _self.target_popup( entry.id, entry.item.id, entry.targets|sort((a,b) => a[1] <=> b[1]), entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Bürger:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
+                                {{ _self.target_popup( entry.id, entry.item.id, entry.targets|sort((a,b) => a[1]|lower <=> b[1]|lower), entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Bürger:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
                             {% elseif entry.target_mode == 6 %}
                                 {% set target_poison = 'can_poison'|items|map(i => '<span class="highlight"><img src="' ~ asset('build/images/item/item_' ~ i.icon ~ '.gif')  ~ '" alt="">' ~ i.label|trans({},'items') ~ '</span>') %}
                                 {{ _self.target_popup( entry.id, entry.item.id, entry.targets, entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du hast nichts, womit du %poison% kombinieren kannst. Du benötigst einen der folgenden Gegenstände:<br />%list_head% oder %list_tail%.'|trans({'%poison%': '<span class="highlight"><img src="' ~ asset('build/images/item/item_' ~ entry.item.prototype.icon ~ '.gif')  ~ '" alt="">' ~ entry.item.prototype.label|trans({},'items') ~ '</span>', '%list_head%': target_poison|slice(0,-1)|join(', '), '%list_tail%': target_poison|slice(-1,1)|join(', ')},'game')|raw, true, false, entry.action.confirm, entry.action.confirmMsg ) }}
@@ -147,11 +147,11 @@
                     </span>
                     {% if entry.targets is not null and not entry.crossed %}
                         {% if entry.target_mode == 2 %}
-                            {{ _self.target_popup( entry.id, null, entry.targets|sort((a,b) => a[1] <=> b[1]), entry.id ~ '--special', 'Einen Bürger heimbringen:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
+                            {{ _self.target_popup( entry.id, null, entry.targets|sort((a,b) => a[1]|lower <=> b[1]|lower), entry.id ~ '--special', 'Einen Bürger heimbringen:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
                         {% elseif entry.target_mode == 0 or entry.target_mode == 1 %}
                             {{ _self.target_popup( entry.id, null, entry.targets, entry.id ~ '--special', 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du verfügst über keine geeigneten Gegenstände'|trans({},'game'), true, false, entry.action.confirm, entry.action.confirmMsg ) }}
                         {% elseif entry.target_mode in [3,4,5] %}
-                            {{ _self.target_popup( entry.id, null, entry.targets|sort((a,b) => a[1] <=> b[1]), entry.id ~ '--special', 'Bitte wähle einen Bürger:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
+                            {{ _self.target_popup( entry.id, null, entry.targets|sort((a,b) => a[1]|lower <=> b[1]|lower), entry.id ~ '--special', 'Bitte wähle einen Bürger:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
                         {% endif %}
                     {% endif %}
                     {% if not entry.action.tooltip is null %}
@@ -178,11 +178,11 @@
                     <span class="label"><b>{{ entry.action.label|trans({},'items') }}</b></span>
                     {% if entry.targets is not null and not entry.crossed %}
                         {% if entry.target_mode == 2 %}
-                            {{ _self.target_popup( entry.id, null, entry.targets|sort((a,b) => a[1] <=> b[1]), entry.id ~ '--hero', 'Einen Bürger heimbringen:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
+                            {{ _self.target_popup( entry.id, null, entry.targets|sort((a,b) => a[1]|lower <=> b[1]|lower), entry.id ~ '--hero', 'Einen Bürger heimbringen:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
                         {% elseif entry.target_mode == 0 or entry.target_mode == 1 %}
                             {{ _self.target_popup( entry.id, null, entry.targets, entry.id ~ '--hero', 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du verfügst über keine geeigneten Gegenstände'|trans({},'game'), true, false, entry.action.confirm, entry.action.confirmMsg ) }}
                         {% elseif entry.target_mode in [3,4,5] %}
-                            {{ _self.target_popup( entry.id, null, entry.targets|sort((a,b) => a[1] <=> b[1]), entry.id ~ '--hero', 'Bitte wähle einen Bürger:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
+                            {{ _self.target_popup( entry.id, null, entry.targets|sort((a,b) => a[1]|lower <=> b[1]|lower), entry.id ~ '--hero', 'Bitte wähle einen Bürger:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
                         {% endif %}
                     {% endif %}
                     {% if not entry.action.tooltip is null %}
