--- a/templates/ajax/soul/view_town_content.html.twig
+++ b/templates/ajax/soul/view_town_content.html.twig
@@ -49,14 +49,19 @@
                 {% endif %}
                 <span class="link" x-ajax-href="{{ path('soul_visit', {id: citizen.user.id}) }}">{{citizen.user.name}}</span>
             </div>
-            <div class="padded cell rw-4 rw-lg-3 hide-sm ">
+            <div class="padded cell rw-4 rw-lg-3 hide-sm">
                 {% if citizen.cod is not null %}
                     {{citizen.cod.label|trans({}, 'game')}}
                 {% else %}
                     {{'Unbekannte Todesursache'|trans({}, 'game')}}
                 {% endif %}
                 {% if not citizen.lastWords is empty %}
-                <img src="{{asset('build/images/log/chat.gif')}}"  alt=""/>
+                    <img src="{{asset('build/images/log/chat.gif')}}"  alt=""/>
+                    {% if is_granted('ROLE_CROW') %}
+                        <br/>
+                        <img x-model="last" x-action="edit" x-original="{{ citizen.lastWords }}" x-endpoint="{{ path('admin_user_edit_comment', {id: citizen.user.id, cid: citizen.id}) }}" class="pointer" src="{{ asset('build/images/forum/edit.png') }}" alt="edit" />
+                        <img x-model="last" x-action="del" x-endpoint="{{ path('admin_user_edit_comment', {id: citizen.user.id, cid: citizen.id}) }}" class="pointer" src="{{ asset('build/images/icons/small_remove.gif') }}" alt="del" />
+                    {% endif %}
                 {% endif %}
                 <div class="tooltip">
                     {% if citizen.lastWords is empty %}
@@ -66,7 +71,19 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="padded cell rw-4 rw-lg-3 rw-md-12 hide-sm hidden-empty comment">{{citizen.comment}}</div>
+            <div class="padded cell rw-4 rw-lg-3 rw-md-12 hide-sm hidden-empty comment">
+                {% if is_granted('ROLE_CROW') and citizen.commentLocked %}<span style="color: red">{{citizen.comment}}</span>
+                {% else %}{{citizen.comment}}{% endif %}
+                {% if is_granted('ROLE_CROW') and citizen.comment is not empty %}
+                    <br/>
+                    <img x-model="com" x-original="{{ citizen.comment }}" x-action="edit" x-endpoint="{{ path('admin_user_edit_comment', {id: citizen.user.id, cid: citizen.id}) }}" class="pointer" src="{{ asset('build/images/forum/edit.png') }}" alt="edit" />
+                    <img x-model="com" x-action="del" x-endpoint="{{ path('admin_user_edit_comment', {id: citizen.user.id, cid: citizen.id}) }}" class="pointer" src="{{ asset('build/images/icons/small_remove.gif') }}" alt="del" />
+                {% elseif is_granted('ROLE_CROW') and not citizen.commentLocked %}
+                    <img x-model="com" x-action="del" x-endpoint="{{ path('admin_user_edit_comment', {id: citizen.user.id, cid: citizen.id}) }}" class="pointer" src="{{ asset('build/images/icons/lock.gif') }}" alt="lock" />
+                {% elseif is_granted('ROLE_CROW') %}
+                    <span style="color: red">[ ... ]</span>
+                {% endif %}
+            </div>
             <div class="padded cell rw-12 hide-desktop hide-lg hide-md comment">
                 {% if citizen.cod is not null %}
                     <i>{{citizen.cod.label|trans({}, 'game')}}</i>
@@ -84,3 +101,17 @@
         {% endfor %}
     </div>
 </div>
+{% if is_granted('ROLE_CROW') %}
+    <script>
+        (function() {
+            $.html.addEventListenerAll('[x-model][x-endpoint][x-action]', 'click', (e,elem) => {
+                const action = elem.getAttribute('x-action');
+                let text = null;
+                if (action === 'del' && !confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}')) return;
+                if (action === 'edit' && (text = prompt('{{ 'Bearbeiten'|trans({},'admin') }}', elem.getAttribute('x-original'))) === null) return;
+
+                $.ajax.easySend(elem.getAttribute('x-endpoint'), {mod: elem.getAttribute('x-model'), txt: text}, () => $.ajax.load(null, '{{ return_to|e('js') }}'));
+            })
+        })();
+    </script>
+{% endif %}
