--- a/templates/ajax/soul/view_town_foreign.html.twig
+++ b/templates/ajax/soul/view_town_foreign.html.twig
@@ -8,7 +8,7 @@
                     <button class='inline' x-ajax-href="{{path('soul_visit', {id: user.id})}}"><img src="{{asset('build/images/soul/small_back.gif')}}" alt ="" /> {{'Zurück'|trans({}, 'global')}}</button>
                 </div>
             </div>
-            {% include 'ajax/soul/view_town_content.html.twig' %}
+            {% include 'ajax/soul/view_town_content.html.twig' with {'return_to': self_path} %}
         </div>
     </div>
 {% endblock %}
