--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1372,12 +1372,12 @@ span.language {
   text-transform: uppercase;
   font-size: 1.2rem;
   line-height: 20px;
-  width: 20px;
-  background-color: saddlebrown;
   display: inline-block;
   text-align: center;
-  height: 20px;
   color: sandybrown;
+  img {
+    width: 100%;
+  }
 }
 
 div.block {
