--- a/templates/ajax/game/town/watchtower.html.twig
+++ b/templates/ajax/game/town/watchtower.html.twig
@@ -42,6 +42,9 @@
                     <div class="watchtower-prediction-bar">
                         <div class="watchtower-prediction-progress" style="width: {{ z0[4] }}%;"></div>
                         <div class="watchtower-prediction-text" style="width: {{ z0[4] }}%;">{{ z0[4] }}%</div>
+                        <div class="tooltip help">
+                            {{ 'Jeder Bürger, der herkommt, um den Horizont abzusuchen, kann die Qualität der Abschätzung verbessern.'|trans({}, 'game') }}
+                        </div>
                     </div>
                 </div>
                 {% else %}
