Fix Future header being cropped

--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -355,7 +355,7 @@ div.tooltip.badge-tooltip {
         margin: 0 15px;
         .head {
             background: url('../../img/underDevBanner.gif') center/contain no-repeat;
-            height: 181px;
+            height: 181px; position: relative;
 
             .title {
                 padding-top: 150px; text-transform: uppercase; color: #fff595; font-weight: bold;
