--- a/templates/ajax/public/et_welcome.html.twig
+++ b/templates/ajax/public/et_welcome.html.twig
@@ -23,52 +23,84 @@
                     </div>
                     <div class="padded cell rw-8 grow-2 justify">
                         {% if current_user is null and target_user is null %}
-                            <p>
+                            <div class="note">
                                 <strong>{{ 'Hallo %username%!'|trans({'%username%': etwin_user.getDisplayName},'login') }}</strong>
-                                {{ 'Dank deines EternalTwin-Account kannst du ohne vorherige Registrierung MyHordes spielen!'|trans({},'login') }}
-                            </p>
-                            <p>
-                                <img alt="" src="{{ asset('build/images/icons/small_warning.gif') }}">
+                                {{ 'Bevor du mit deinem EternalTwin-Account spielen kannst, brauchen wir noch ein paar zusätzliche Informationen von dir.'|trans({},'login') }}
+                                <br><br />
+                                <form id="register-form">
+                                    <div class="row">
+                                        <div class="cell padded-small rw-6 rw-md-12"><b><label for="mail1">{% trans from 'login' %}E-Mail Adresse{% endtrans %}</label></b></div>
+                                        <div class="cell padded-small rw-6 rw-md-12"><input name="mail1" id="mail1" type="email" value="{{ etwin_mail }}" /></div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="cell padded-small rw-6 rw-md-12"><b><label for="mail2">{% trans from 'login' %}E-Mail Adresse{% endtrans %} ({% trans from 'login' %}wiederholen{% endtrans %})</label></b></div>
+                                        <div class="cell padded-small rw-6 rw-md-12"><input name="mail2" id="mail2" type="email"value="{{ etwin_mail }}"  /></div>
+                                    </div>
+                                    <div class="row hidden" id="mail-warning-row">
+                                        <div class="cell padded-small rw-12">
+                                            <div class="note note-warning">{{ 'Dein E-Mail Anbieter stellt Nachrichten von MyHordes nicht oder nur sehr unzuverlässig zu. Wir empfehlen, wenn möglich eine andere E-Mail Adresse für die Registrierung zu verwenden. Bitte entschuldige die Unannehmlichkeiten.'|trans({},'login') }}</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="cell padded-small rw-6 rw-md-12"><b><label for="refer">{% trans from 'login' %}Pate{% endtrans %}</label></b></div>
+                                        <div class="cell padded-small rw-6 rw-md-12"><input name="refer"  id="refer" type="text" value="{{ refer }}" /></div>
+                                        <div class="cell padded-small rw-12"><span class="small">{{ 'Wenn du von einem anderen Spieler für MyHordes geworben wurdest, gib hier seinen Namen ein. Er oder sie wird dir sehr dankbar sein...'|trans({}, 'login') }}</span></div>
+                                    </div>
+
+                                    <p class="justify">
+                                        {% trans from 'login' %}
+                                            Um die Registrierung abzuschließen und deinen Account zu aktivieren, musst du auf einen
+                                            Aktivierungslink klicken, der dir an die angegebene E-Mail Adresse geschickt wird.
+                                        {% endtrans %}
+                                    </p>
+
+                                    <!-- <p class="justify"><b><label for="register-privacy"><input name="privacy"  id="register-privacy" type="checkbox" /> {% trans from 'login' %}Ich habe die Datenschutzerklärung gelesen und akzeptiere sie.{% endtrans %}</label></b></p> -->
+                                </form>
+                            </div>
+                            <div class="note note-warning">
                                 {% trans from 'login' %}
                                     <strong>Achtung:</strong> Du hast bereits einen MyHordes-Account? Dann solltest du jetzt
                                     <i>abbrechen</i> und dich zuerst mit deinem alten MyHordes-Account einloggen. Du kannst deinen
                                     EternalTwin-Account in den Einstellungen mit deinem MyHordes-Account verknüpfen.
                                 {% endtrans %}
-                            </p>
+                            </div>
                         {% else %}
-                            <p>
+                            <br />
+                            <div class="note">
                                 <strong>{{ 'Vielen Dank, dass du deinen MyHordes-Account %namecheck_mh% mit deinem EternalTwin-Account %namecheck_et% verknüpfst!'|trans({
                                         '%namecheck_mh%': current_user.username == etwin_user.getDisplayName ? '' : ( '(' ~ current_user.username ~ ')' ),
                                         '%namecheck_et%': current_user.username == etwin_user.getDisplayName ? '' : ( '(' ~ etwin_user.getDisplayName ~ ')' )
                                     },'login') }}
-                                </strong>
-                            </p>
-                            <p>
+                                </strong><br>
+
                                 {{ 'Nach der Verknüpfung kannst du dich nur noch über EternalTwin in MyHordes anmelden. Deine alten Zugangsdaten werden ungültig.'|trans({},'login') }}
                                 {{ 'Deine Seele bleibt bei der Verknüpfung mit EternalTwin selbstverständlich vollständig erhalten.'|trans({},'login') }}
                                 {{ 'Wenn du fortfahren möchtest, gib bitte ein letztes Mal dein MyHordes-Passwort ein und klicke auf "Verknüpfen".'|trans({},'login') }}
-                            </p>
-                            <form>
-                                <div class="row">
-                                    <div class="cell padded-small rw-4 rw-md-12"><b><label for="login-password">{% trans from 'login' %}Passwort{% endtrans %}</label></b></div>
-                                    <div class="cell padded-small rw-8 rw-md-12"><input name="login_pass" id="login-password" type="password" /></div>
-                                </div>
-                            </form>
+                                <br /><br />
+                                <form>
+                                    <div class="row">
+                                        <div class="cell padded-small rw-4 rw-md-12"><b><label for="login-password">{% trans from 'login' %}Passwort{% endtrans %}</label></b></div>
+                                        <div class="cell padded-small rw-8 rw-md-12"><input name="login_pass" id="login-password" type="password" /></div>
+                                    </div>
+                                </form>
+                            </div>
+
                         {% endif %}
                     </div>
                 </div>
 
                 <div class="row-flex v-center space">
+                    <div class="cell">
+                        <a href="" id="et_cancel">
+                            {{ 'Abbrechen'|trans({},'login') }}
+                        </a>
+                    </div>
                     <div class="cell rw-4">
                         <button id="et_confirm">
                             {% if current_user is null and target_user is null %}{{ 'Los geht\'s!'|trans({},'login') }}{% endif %}
                             {% if current_user is not null %}{{ 'Verknüpfen'|trans({},'login') }}{% endif %}
                         </button>
-                    </div>
-                    <div class="cell">
-                        <a href="" id="et_cancel">
-                            {{ 'Abbrechen'|trans({},'login') }}
-                        </a>
                     </div>
                 </div>
             {% endif %}
@@ -88,11 +120,28 @@
                 } else $.ajax.load(null, '{{ path('initial_landing') }}', true)
             });
         {% else %}
+            $.html.addEventListenerAll('#register-email','change', () => {
+                const value = /^.*?@.*?(\w+)\.\w+$/gm.exec(document.getElementById('register-email').value);
+                const warning = (value && value.length === 2 && ['hotmail','outlook','live','msn','windowslive'].includes( value[1] ));
+                if (warning) document.getElementById('mail-warning-row').classList.remove('hidden');
+                else document.getElementById('mail-warning-row').classList.add('hidden');
+            });
+
             document.getElementById('et_confirm').addEventListener('click', function () {
                 $.ajax.easySend( '{{ path('api_etwin_confirm') }}', {
-                    pass: document.getElementById('login-password') ? document.getElementById('login-password').value : null
+                    pass: document.getElementById('login-password') ? document.getElementById('login-password').value : null,
+                    mail1: document.getElementById('mail1') ? document.getElementById('mail1').value : null,
+                    mail2: document.getElementById('mail2') ? document.getElementById('mail2').value : null,
+                    refer: document.getElementById('refer') ? document.getElementById('refer').value : null,
                 }, function() {
                     $.ajax.load(null, '{{ path('initial_landing') }}', true)
+                }, {
+                    'invalid_fields': function(data) {
+                        let message = "{{ 'Einige Felder sind nicht korrekt ausgefüllt. Bitte prüfe eine Eingaben.'|trans({},'login')|e('js') }}\n";
+                        for (let i = 0; i < data.fields.length; ++i)
+                            message += "\n" + data.fields[i];
+                        return message;
+                    }
                 });
             });
             document.getElementById('et_cancel').addEventListener('click', function (e) {
