--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -403,7 +403,7 @@ ul.subscriptions {
   color: #f0d79e; font-weight: bold; cursor: pointer; display: inline-flex; justify-content: center;
   align-items: center; height: 25px; padding: 7px 7px; vertical-align: middle; border-radius: 2px;
   box-shadow: 1px 1px 1px 0 black; margin-bottom: .5em;
-  &:hover { border-color: #f0d79e; box-shadow: 0 0 8px 0 black; }
+  &:hover,&:focus { border-color: #f0d79e; box-shadow: 0 0 8px 0 black; }
   img {
     vertical-align: middle;
 
